--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </span>
 </div>
 <div class="container">
-    <div id="container"></div>
+    <div id="container">
+    </div>
 </div>
 <div id="footer">
     <div class="sp_cop">
